Tue May 25 11:41:47 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_argument/arglist.cpp:
        * TAO_IDL/be/be_visitor_operation/ami_cs.cpp:
        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:
        
          Changes to follow naming conventions for AMI and
          AMI4CCM.

Mon May 24 18:23:55 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:
        
          Cosmetic changes.
          
        * TAO_IDL/be/be_interface.cpp(gen_var_out_seq_decls):
        
          Added additional check for AMI-related interface. When
          processing the *A.idl file, all interfaces are AMI-related,
          but the IDL itself has been generated, and there is no
          convenient flag to tell the IDL compiler that these are
          AMI-related interfaces. The only recourse is to check the
          prefix of the interfaces' names for "AMI4CCM_". Finding
          this prefix will disable the generation of the forward
          declarations of the class and _var with the AMI_ and
          AMI4CCM_ prefixes added yet again.

Mon May 24 17:56:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_array/array_ch.cpp:
        * TAO_IDL/be/be_visitor_traits.cpp:
        * TAO_IDL/be/be_visitor_typedef/typedef_ch.cpp:
          Changed layout of generated code

Mon May 24 15:36:41 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/include/ast_interface.h:
        * TAO_IDL/be/be_visitor_root/root_ch.cpp:
        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/ast/ast_visitor_tmpl_module_inst.cpp:
        * TAO_IDL/ast/ast_interface.cpp:
        * TAO_IDL/be_include/be_interface.h:
        * TAO_IDL/be_include/be_global.h:
        * TAO_IDL/util/utl_global.cpp:
