@@ -405,7 +405,7 @@ run_message_count (CORBA::ORB_ptr orb,
   for (int j = 0; j != PAYLOAD_LENGTH; ++j)
     payload[j] = CORBA::Octet(j % 256);
 
-  Reply_Handler *reply_handler_impl;
+  Reply_Handler *reply_handler_impl = 0;
   ACE_NEW_RETURN (reply_handler_impl,
                   Reply_Handler,
                   1);
@@ -516,7 +516,7 @@ run_timeout (CORBA::ORB_ptr orb,
   for (int j = 0; j != PAYLOAD_LENGTH; ++j)
     payload[j] = CORBA::Octet(j % 256);
 
-  Reply_Handler *reply_handler_impl;
+  Reply_Handler *reply_handler_impl = 0;
   ACE_NEW_RETURN (reply_handler_impl,
                   Reply_Handler,
                   1);
@@ -552,7 +552,7 @@ run_timeout (CORBA::ORB_ptr orb,
         {
           ami_buffering->sendc_receive_data (reply_handler.in (),
                                              payload);
-          send_count++;
+          ++send_count;
 
           CORBA::ULong receive_count =
             ami_buffering_admin->request_count ();
@@ -635,7 +635,7 @@ run_timeout_reactive (CORBA::ORB_ptr orb,
   for (int j = 0; j != PAYLOAD_LENGTH; ++j)
     payload[j] = CORBA::Octet(j % 256);
 
-  Reply_Handler *reply_handler_impl;
+  Reply_Handler *reply_handler_impl = 0;
   ACE_NEW_RETURN (reply_handler_impl,
                   Reply_Handler,
                   1);
