@@ -31,16 +31,11 @@ TimeoutClient::TimeoutClient (CORBA::ORB_ptr orb,
   , INVOKE_ASYNCH (1)
   , timeToWait_ (timeToWait)
 {
-
 }
-
 
 TimeoutClient::~TimeoutClient ()
 {
-
 }
-
-
 
 int
 TimeoutClient::svc ()
@@ -49,7 +44,6 @@ TimeoutClient::svc ()
 
   try
     {
-
       // Tests timeouts for synchronous
       this->synch_test ();
 
